# Reconfigure

./: .gitignore  Cargo.toml  README.md  example.toml  reconfig.yml
scripts/: add_package.sh  install_packages.sh  kde_config.sh  setup.sh
src/: main.rs
src/commands/: add_package.rs  apply.rs  init.rs  mod.rs
src/config/: mod.rs
src/system/: mod.rs
