[package]
name = "rekonfig"
version = "0.1.0"
edition = "2021"
authors = ["Mel Sardes <melsardes2042@hotmail.com>"]
description = "A lightweight, extensible tool for automating Arch Linux system configurations"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
which = "5.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking"] }
